<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_uav_cpp</name>
  <version>0.1.4</version>
  <description>A ROS2 wrapper for cpp_uav library</description>
  <maintainer email="damien@robotsix.net">Damien SIX</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>uav_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
